Bug 913552 - [Cost Control] Grid numbers are too close to the left edge of screen

--- a/apps/costcontrol/style/views/datausage.css
+++ b/apps/costcontrol/style/views/datausage.css
@@ -26,7 +26,7 @@
 
 #datausage-tab .toggle-data li p:only-child,
 #datausage-tab .toggle-data li p:first-of-type:last-of-type {
-  line-height: 1.8rem;
+  line-height: 2rem;
 }
 
 #datausage-tab .toggle-data li p strong {
@@ -55,7 +55,7 @@
   border: solid 0.1rem #979797;
   left: 0.5rem;
   top: 50%;
-  margin: -0.95rem 0 0;
+  margin: -0.9rem 0 0;
   transition: background 0.2s ease;
 }
 
